Fix background grid to work on IOs Safari

--- a/css/site.css
+++ b/css/site.css
@@ -32,7 +32,7 @@ body{
     position: relative;
     z-index: -3;
     background-attachment:fixed;
-    background-image:linear-gradient(to bottom,transparent 99%,#1f0f2e),linear-gradient(to right, transparent 99%,#1f0f2e 100%); 
+    background-image:linear-gradient(to bottom,rgba(255,255,255,0) 99%,#1f0f2e),linear-gradient(to right, rgba(255,255,255,0) 99%,#1f0f2e 100%); 
     background-size:var(--light-grid)
 }
 
